Task 183: Fixed container overflow on mobile

--- a/src/components/MenuScreen/MenuScreen.styl
+++ b/src/components/MenuScreen/MenuScreen.styl
@@ -154,6 +154,13 @@
         flex-wrap: nowrap
         margin-bottom: 20px
 
+        &--container
+            width: 100%
+            display: flex
+            align-items: center
+            justify-content: space-between
+            flex-wrap: wrap
+
         &--centered
             justify-content: center
             margin-top: 20px
